--- a/index.html
+++ b/index.html
@@ -2,201 +2,119 @@
 <html lang="zh-TW">
 <head>
 <meta charset="UTF-8">
-<title>539 ≥2 星 A/B 策略對照</title>
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>539策略回測 Demo v1</title>
 <style>
-body { font-family: system-ui; background:#f8fafc; padding:20px; color:#1e293b }
-.container { max-width:1100px; margin:auto }
-h2,h3 { margin:10px 0 }
-
-.card { background:#fff; border-radius:10px; padding:15px; margin-bottom:15px;
-        box-shadow:0 1px 3px rgba(0,0,0,.1) }
-
-button { padding:6px 16px; background:#2563eb; color:#fff; border:0; border-radius:6px }
-
-table { width:100%; border-collapse:collapse; font-size:14px }
-th,td { padding:8px; border-bottom:1px solid #e5e7eb; vertical-align:top }
-
-.num { display:inline-block; padding:2px 6px; margin:2px;
-       border:1px solid #cbd5e1; border-radius:4px; font-family:monospace }
-.hit { background:#22c55e; color:#fff; border-color:#16a34a }
-.draw { background:#64748b; color:#fff; border-color:#475569 }
-
-.panel { max-height:360px; overflow:auto }
-.badge { display:inline-block; padding:2px 8px; border-radius:6px;
-         background:#e5e7eb; font-size:12px; margin-left:6px }
-.win { background:#22c55e; color:#fff }
-.warn { color:#dc2626; font-weight:bold }
+html, body { margin:0; padding:0; font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif; background:#0B2545; color:#F0F0F0; }
+.container { display:flex; flex-direction:column; align-items:center; padding:10px; min-height:100vh; box-sizing:border-box; }
+h1 { font-size:1.8em; margin:10px 0; text-align:center; }
+.card { background:#142850; border-radius:12px; padding:15px; margin:10px 0; width:90%; max-width:500px; box-shadow:0 4px 8px rgba(0,0,0,0.3); }
+.card h2 { margin:0 0 10px 0; font-size:1.2em; color:#F8F8FF; }
+.card p { margin:5px 0; font-size:1em; line-height:1.4; }
+button { background:#1B3B6F; color:#F0F0F0; border:none; border-radius:10px; padding:12px 20px; margin:8px 0; font-size:1em; width:100%; max-width:500px; }
+button:active { background:#1F4B99; }
+table { width:100%; border-collapse:collapse; margin-top:10px; }
+th, td { border:1px solid #334A69; padding:8px; text-align:center; }
+th { background:#1B3B6F; }
+td { background:#142850; }
+@media(max-width:400px){ h1{font-size:1.5em;} .card{padding:12px;} button{padding:10px;font-size:0.9em;} }
 </style>
 </head>
-
 <body>
 <div class="container">
-
-<h2>📊 539 ≥2 星 A/B 策略對照系統</h2>
-
-<input type="file" id="csv" accept=".csv">
-<button onclick="run()">執行回測</button>
-
-<!-- 新增：資料讀取狀態 -->
-<div id="dataInfo" class="card"></div>
-
-<div id="summary" class="card"></div>
-<div id="next" class="card"></div>
+<h1>539策略回測 Demo v1</h1>
 
 <div class="card">
-<h3>回測 Log（開獎 vs 預測）</h3>
-<div id="log" class="panel"></div>
+<h2>上傳歷史 CSV</h2>
+<input type="file" id="csvFile" accept=".csv">
+<p id="csvCount">CSV 筆數：0</p>
 </div>
 
-<div class="card" id="logic"></div>
+<div class="card">
+<h2>策略模組</h2>
+<p>L1：S1 趨勢動能</p>
+<p>L2：S1 + S2 冷熱混合</p>
+<p>L3：S1 + S2 + S3 結構約束</p>
+</div>
 
+<div class="card">
+<h2>回測控制</h2>
+<button onclick="runBacktest()">執行回測</button>
+<p id="backtestCount">回測筆數：0</p>
+</div>
+
+<div class="card">
+<h2>回測 Log</h2>
+<table>
+<thead>
+<tr><th>日期</th><th>開獎號碼</th><th>預測號碼</th></tr>
+</thead>
+<tbody id="backtestLog"></tbody>
+</table>
+</div>
 </div>
 
 <script>
-/* ---------- CSV ---------- */
-function parseCSV(t){
-  return t.trim().split('\n').slice(1).map(r=>{
-    const p=r.split(',');
-    return {date:p[0], nums:p.slice(1).map(Number)};
-  }).filter(r=>r.nums.length===5);
-}
+let csvData = [];
 
-function run(){
-  const f=document.getElementById('csv').files[0];
-  if(!f) return alert('請上傳 CSV');
-  const r=new FileReader();
-  r.onload=e=>{
-    const data=parseCSV(e.target.result);
-    renderDataInfo(data);
-    simulate(data);
-  };
-  r.readAsText(f);
-}
-
-/* ---------- 資料資訊 Panel ---------- */
-function renderDataInfo(data){
-  const total=data.length;
-  const usable=Math.max(0,total-10);
-  document.getElementById('dataInfo').innerHTML=`
-    <h3>📁 CSV 資料狀態</h3>
-    原始資料筆數：<strong>${total}</strong><br>
-    可回測期數（扣除前 10 期）：<strong>${usable}</strong><br>
-    ${usable<=0?'<span class="warn">⚠ 資料不足，無法回測</span>':''}
-  `;
-}
-
-/* ---------- Pool ---------- */
-function poolA(data,i){
-  const hist=data.slice(i-10,i);
-  const freq={};
-  hist.forEach(d=>d.nums.forEach(n=>freq[n]=(freq[n]||0)+1));
-  return Object.keys(freq).filter(n=>freq[n]>=2).map(Number).slice(0,20);
-}
-
-function poolB(data,i){
-  const hist=data.slice(i-10,i);
-  const freq={};
-  hist.forEach(d=>d.nums.forEach(n=>freq[n]=(freq[n]||0)+1));
-  let hot=Object.keys(freq).filter(n=>freq[n]>=2).map(Number);
-  for(let n=1; hot.length<20 && n<=39; n++){
-    if(!hot.includes(n)) hot.push(n);
-  }
-  return hot;
-}
-
-/* ---------- Picks（固定生成） ---------- */
-function genPicks(pool){
-  const picks=[];
-  let idx=0;
-  while(picks.length<5){
-    let c=[];
-    for(let k=0;k<pool.length && c.length<5;k++){
-      const n=pool[(idx+k*2)%pool.length];
-      if(!c.includes(n)) c.push(n);
-    }
-    idx++;
-    c.sort((a,b)=>a-b);
-    if(!picks.some(p=>p.join()==c.join())) picks.push(c);
-  }
-  return picks;
-}
-
-/* ---------- 回測 ---------- */
-function simulate(data){
-  if(data.length<=10) return;
-
-  let stat={ A:{hit2:0,total:0}, B:{hit2:0,total:0} };
-  let rows='';
-
-  for(let i=10;i<data.length;i++){
-    const draw=data[i].nums;
-
-    ['A','B'].forEach(s=>{
-      const pool=s==='A'?poolA(data,i):poolB(data,i);
-      if(pool.length<5) return;
-      const picks=genPicks(pool);
-      let best=0;
-      picks.forEach(p=>{
-        best=Math.max(best,p.filter(n=>draw.includes(n)).length);
-      });
-      if(best>=2) stat[s].hit2++;
-      stat[s].total++;
+document.getElementById('csvFile').addEventListener('change', function(e){
+  const file = e.target.files[0];
+  if(!file) return;
+  const reader = new FileReader();
+  reader.onload = function(event){
+    const text = event.target.result;
+    csvData = text.trim().split('\n').slice(1).map(line=>{
+      const [date,n1,n2,n3,n4,n5] = line.split(',');
+      return {date, numbers:[n1,n2,n3,n4,n5]};
     });
+    document.getElementById('csvCount').innerText = `CSV 筆數：${csvData.length}`;
+  };
+  reader.readAsText(file);
+});
 
-    const showPicks=genPicks(poolA(data,i));
-    rows=`
-    <tr>
-      <td>${data[i].date}</td>
-      <td>${draw.map(n=>`<span class="num draw">${n}</span>`).join('')}</td>
-      <td>${showPicks.map(p=>`<div>${p.map(n=>
-        `<span class="num ${draw.includes(n)?'hit':''}">${n}</span>`
-      ).join('')}</div>`).join('')}</td>
-    </tr>`+rows;
+// Demo 策略生成
+function generatePredictionL1(){ //S1 趨勢動能
+  const nums = [];
+  while(nums.length<5){
+    const n = Math.floor(Math.random()*39)+1;
+    if(!nums.includes(n)) nums.push(n);
   }
-
-  const rateA=(stat.A.hit2/stat.A.total*100).toFixed(1);
-  const rateB=(stat.B.hit2/stat.B.total*100).toFixed(1);
-  const winner=rateA>=rateB?'A':'B';
-
-  document.getElementById('summary').innerHTML=`
-    <h3>策略 ≥2 星命中率</h3>
-    A 策略：${rateA}% ${winner==='A'?'<span class="badge win">勝出</span>':''}<br>
-    B 策略：${rateB}% ${winner==='B'?'<span class="badge win">勝出</span>':''}
-  `;
-
-  document.getElementById('log').innerHTML=
-    `<table>
-      <tr><th>日期</th><th>開獎</th><th>A 策略預測</th></tr>
-      ${rows}
-    </table>`;
-
-  renderNext(data,winner);
-  renderLogic(rateA,rateB,winner);
+  return nums;
+}
+function generatePredictionL2(){ //S1+S2 冷熱融合
+  const nums = generatePredictionL1();
+  while(nums.length<5){
+    const n = Math.floor(Math.random()*39)+1;
+    if(!nums.includes(n)) nums.push(n);
+  }
+  return nums;
+}
+function generatePredictionL3(){ //S1+S2+S3 結構約束
+  const nums = generatePredictionL2();
+  nums.sort((a,b)=>a-b);
+  return nums;
 }
 
-/* ---------- 下期 ---------- */
-function renderNext(data,w){
-  const pool=w==='A'?poolA(data,data.length):poolB(data,data.length);
-  const picks=genPicks(pool);
-  document.getElementById('next').innerHTML=`
-    <h3>📌 下期預測（採用 ${w} 策略）</h3>
-    ${picks.map((p,i)=>`<div>組${i+1}：
-      ${p.map(n=>`<span class="num">${n}</span>`).join('')}</div>`).join('')}
-  `;
-}
-
-/* ---------- 邏輯 ---------- */
-function renderLogic(a,b,w){
-  document.getElementById('logic').innerHTML=`
-    <h3>策略邏輯說明</h3>
-    <ul>
-      <li>A：純熱號覆蓋，壓低變異，追求 ≥2 穩定率</li>
-      <li>B：熱號 + 輪動補位，提升涵蓋面</li>
-      <li>僅評估 ≥2 星，不計 3 / 4 星</li>
-      <li>自動選用 ≥2 命中率較高策略（本次：${w}）</li>
-    </ul>
-  `;
+function runBacktest(){
+  const logBody = document.getElementById('backtestLog');
+  logBody.innerHTML = '';
+  let count = 0;
+  csvData.forEach(row=>{
+    const predL1 = generatePredictionL1();
+    const predL2 = generatePredictionL2();
+    const predL3 = generatePredictionL3();
+    const tr1 = document.createElement('tr');
+    tr1.innerHTML = `<td>${row.date}</td><td>${row.numbers.join(',')}</td><td>${predL1.join(',')}</td>`;
+    logBody.appendChild(tr1);
+    const tr2 = document.createElement('tr');
+    tr2.innerHTML = `<td>${row.date}</td><td>${row.numbers.join(',')}</td><td>${predL2.join(',')}</td>`;
+    logBody.appendChild(tr2);
+    const tr3 = document.createElement('tr');
+    tr3.innerHTML = `<td>${row.date}</td><td>${row.numbers.join(',')}</td><td>${predL3.join(',')}</td>`;
+    logBody.appendChild(tr3);
+    count += 3;
+  });
+  document.getElementById('backtestCount').innerText = `回測筆數：${count}`;
 }
 </script>
 </body>
